--- a/css/theme.css
+++ b/css/theme.css
@@ -11,3 +11,8 @@ nav li a{
 	padding: 5px;
 	text-decoration: none;
 }
+
+.column, .columns, .column:first-child, 
+.columns:first-child{
+	margin-left: 0%;
+}
