--- a/css/theme.css
+++ b/css/theme.css
@@ -40,6 +40,7 @@ nav li a{
 		position: relative;
 		width: 100%;
 		height: auto;
+		margin-left: 0px;
 		padding: 0px;
 		z-index: 1;
 		background-color: transparent;
