--- a/css/admin.css
+++ b/css/admin.css
@@ -3,6 +3,16 @@ html, body, .container{
 	height: 100%;
 }
 
+.error{
+    display: none;
+    color: #fff;
+}
+
+input[type="submit"]{
+    display: block;
+    clear: both;
+}
+
 .column, .columns, .column:first-child, 
 .columns:first-child{
     margin-left: 0%;
