--- a/css/theme.css
+++ b/css/theme.css
@@ -13,6 +13,14 @@
 	cursor: pointer;
 }
 
+.no-user{
+	color: #ff0000;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+    font-size: medium;
+}
+
 nav{
 	width: 200px;
 	height: 100vh;
