--- a/css/admin.css
+++ b/css/admin.css
@@ -13,6 +13,14 @@ input[type="submit"]{
     clear: both;
 }
 
+.no-user{
+    color: #ff0000;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: medium;
+    font-weight: bold;
+}
+
 .column, .columns, .column:first-child, 
 .columns:first-child{
     margin-left: 0%;
