--- a/css/admin.css
+++ b/css/admin.css
@@ -77,7 +77,7 @@ img{
 }
 
 #add-content, #remove-content, #upload-images,
-#plugins, #custom, #documentation{
+#plugins, #custom, #documentation, #meta-data{
     display: block;
 }
 
@@ -94,7 +94,7 @@ img{
     } 
 
     #add-content, #remove-content, #upload-images,
-    #plugins, #custom, #documentation{
+    #plugins, #custom, #documentation, #meta-data{
         width: 75%;
         display: block;
         float: left;
@@ -134,8 +134,12 @@ textarea{
 
 
 /*image upload */
-#image-, #plugin-upload{
+#image-upload, #plugin-upload{
 	background-color: #33C3F0;
+}
+
+#image-upload .container, #plugin-upload .container{
+    height: 100vh;
 }
 
 #image-upload h2, #plugin-upload h2{
