--- a/css/theme.css
+++ b/css/theme.css
@@ -2,6 +2,7 @@
 	position: absolute;
 	top: 15px;
 	right: 15px;
+	z-index: 2;
 	font-size: 20px;
 	color: #E1E1E1;
 	-webkit-transition: color 1s;
@@ -58,8 +59,9 @@ nav li a{
 
 	nav{
 		width: calc(100% - 250px);
-		float: right;
 		height: auto;
+		overflow: visible;
+		float: right;
 		position: relative;
 		margin-left: 0px;
 		padding: 0px;
